Update CV and fix portfolio download link

--- a/site/index.html
+++ b/site/index.html
@@ -53,7 +53,7 @@
 
        <a
          class="btn ghost"
-         href="assets/cv/Ruslan_AWS_DevOps_Engineer.pdf"
+         href="assets/cv/RuslanDashkin.pdf"
          download
          >
          Download CV
