Update portfolio: add GPU LLM project, improve layout and styles

--- a/site/index.html
+++ b/site/index.html
@@ -68,6 +68,7 @@
 
     <section class="projects">
 
+
       <div class="projects-grid">
         <a class="proj-card" href="https://github.com/rusets/helmkube-autowake-cicd" target="_blank" rel="noopener">
           <div class="proj-title">HelmKube Autowake</div>
@@ -122,7 +123,16 @@
           <div class="proj-tech">S3 · CloudFront · Terraform · GitHub Actions · OIDC</div>
           <div class="proj-desc">
             Personal DevOps portfolio website with full IaC deployment pipeline.
-          </div>
+         </div>
+       </a>
+                <a class="proj-card full-width"
+          href="https://github.com/rusets/gpu-llm-inference-service"
+          target="_blank" rel="noopener">
+          <div class="proj-title">GPU-Accelerated LLM Inference Service</div>
+          <div class="proj-tech">vLLM · FastAPI · Docker · Prometheus · Grafana · NVIDIA DCGM</div>
+          <div class="proj-desc">
+          Single GPU LLM inference stack with explicit concurrency control, bounded queueing, deterministic backpressure (429/503), and full GPU observability.
+      </div>
         </a>
       </div>
     </section>
